# sdepaper

./: slides.md
myPaper/: README.md  myPaper.cabal
myPaper/.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/flag-cache/: QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  pandoc-types-1.17.0.5-BCBoAFSglFt7YJw3duHnTD  texmath-0.9.4.2-4F4qcjMesaVDPm80nHF8NE  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
myPaper/.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/lib/x86_64-linux-ghc-8.0.2/myPaper-0.1.0.0-HDYlCERc2KhHpkNwWe9DV9/: Lib.dyn_hi  Lib.hi
myPaper/.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/pkgdb/: myPaper-0.1.0.0-HDYlCERc2KhHpkNwWe9DV9.conf  package.cache
