name:                myPaper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/suzumiyasmith/myPaper#readme
license:             BSD3
license-file:        LICENSE
author:              Suzumiya
maintainer:          suzumiyasmith@gmail.com
copyright:           Copyright: (c) 2017 Suzumiya
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , texmath
  default-language:    Haskell2010

executable gen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myPaper
  default-language:    Haskell2010

test-suite myPaper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , myPaper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/suzumiyasmith/myPaper
